Deprecated API should be fixed, that's the long and short of it [3191]